Fix messaging view layout issue

--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -32,6 +32,10 @@
 	max-width: 1200px;
 }
 
+.bar-wrap {
+	min-height: 0 !important;
+}
+
 .panel-layout * {
 	box-sizing: border-box;
 }
